sonar pass: more constants, stream.toList, math.clamp, deferred log lambdas